# seshat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  run_coverage.py  seshat.py
.github/workflows/: docker-publish.yml
components/: chatbot.py  lcel.py
db/: db_sqlite3.py
scripts/: confz_demo.py  generate_chat_history.py  update_faq_link_text.py  update_faq_link_text_gr.py
test/: table_parser_test.py  test_batch_ui.py  test_chatbot.py  test_config_loader.py  test_dataframe_io.py  test_db_sqlite3.py  test_embedding_ui.py  test_faq_summary_fix_ui.py  test_langserve_client_ui.py  test_lcel.py  test_meta_prompt_ui.py  test_meta_prompt_ui_extended.py  test_seshat.py  test_system_ui.py  test_table_parser_extended.py  test_utils.py
test/data/: prompts.md  role.csv
tools/: config_loader.py  dataframe_io.py  table_parser.py  utils.py
ui/: __init__.py  batch_ui.py  embedding_ui.py  faq_summary_fix_ui.py  langserve_client_ui.py  meta_prompt_ui.py  system_ui.py
