[tool.poetry]
name = "seshat"
version = "0.1.0"
description = ""
authors = ["Yale Huang <calvino.huang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
attrs = "21.2.0"
Brotli = "1.1.0"
configparser = "6.0.1"
confz = "2.0.1"
Cython = "3.0.10"
dl = "0.1.0"
docutils = "0.20.1"
gradio = "3.50.2"
HTMLParser = "0.0.2"
importlib-metadata = "4.6.4"
ipython = "8.12.3"
ipywidgets = "8.1.2"
Jinja2 = ">3.1.2"
keyring = "23.5.0"
langchain = "0.1.14"
lockfile = "0.12.2"
lxml = "5.2.1"
openai = "1.16.2"
ordereddict = "1.1"
pandas = "2.2.1"
pillow = "10.3.0"
protobuf = "5.26.1"
pydantic = "2.6.4"
pyOpenSSL = "24.1.0"
PyYAML = "6.0.1"
railroad = "0.5.0"
scikit-learn = "1.4.1.post1"
Sphinx = "7.2.6"
toml = "0.10.2"
tornado = "6.4"
zipp = "1.0.0"
chardet = "^5.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
