[tool.poetry]
name = "seshat"
version = "0.1.0"
description = ""
authors = ["Yale Huang <calvino.huang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
confz = "2.0.1"
gradio = "^4.26.0"
ipython = "8.12.3"
langchain = "0.1.14"
openai = "1.16.2"
pydantic = "2.6.4"
scikit-learn = "1.4.1.post1"
openpyxl = "^3.1.2"
langchain-openai = "^0.1.3"
pinecone-client = "^3.2.2"
pymilvus = "^2.4.0"
langchain-community = "^0.0.33"
chardet = "^5.2.0"
langserve = "^0.1.0"
bson = "^0.5.10"
gunicorn = "^22.0.0"
huggingface-hub = "^0.23.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
